--- a/admin/templates/admin_home.html
+++ b/admin/templates/admin_home.html
@@ -6,7 +6,7 @@
 <h1>Providers to review</h1>
 <ul>
     {% for p in ps %}
-    <li>{{p.name}} <img src="{{ p.inspection_report }}" alt="User Image">
+    <li>{{p.name}} <img src="{{ p.inspection_report }}" alt="Inspection report">
         <p>if pass:<br>
             UPDATE providers SET reviewed=true WHERE user_id={{p.user_id}};<br>
             UPDATE providers SET active=true WHERE user_id={{p.user_id}};
