--- a/providers/templates/providers_edit_dish.html
+++ b/providers/templates/providers_edit_dish.html
@@ -6,75 +6,18 @@
 <h1>Edit Menu Information</h1>
 
 <h3>Edit dish</h3>
-<form id="menuEditForm" method="POST" action="{{url_for('providers_bp.update_dish',id=id)}}">
-    {{ form.hidden_tag() }}
-
-    <p>
-        {{form.name.label}} {{form.name}}
-    </p>
-    <p>
-        {% for c in form_cat.categories %}
-        {{c}}
-        {{c.label}}
-        {% endfor %}
-    </p>
-    <p>
-        {{form.recipe.label}} {{form.recipe}}
-
-    </p>
-    <p>
-        {{form.num_servings.label}} {{form.num_servings}}
-    </p>
-    <p>
-        {{form.ingred_disp.label}} {{form.ingred_disp}}
-    </p>
-    <p>
-        {{form.price.label}} {{form.price}}
-    </p>
-
-    <p>
-        {{form.sales_pitch.label}}: {{form.sales_pitch}}
-    </p>
-    <p>
-        {{form.max_meals.label}}{{form.max_meals}}
-    </p>
-    <p>
-        {{form.related_to_dish.label}}: {{form.related_to_dish}}
-    </p>
-    <p>
-        {{form.pass_guidelines.label}}: {{form.pass_guidelines}}
-    </p>
-    <section>
-        <fieldset>
-            <legend>Allergens</legend>
-            <p>Dish contains the following:</p>
-            {% for r in form_restrict.restrictions %}
-            {{r}}
-            {{r.label}}
-            {% endfor %}
-        </fieldset>
-    </section>
-    <p>
-        {{form.active.label}}: {{form.active}}
-    </p>
-    <ul>
-        {% for field in form %}
-        {% for error in field.error %}
-
-        <li>{{ error }}</li>
-        {%endfor%}
-    </ul>
-    {% endfor %}
-
+<form id="dishEditForm" method="POST" action="{{url_for('providers_bp.update_dish',id=id)}}">
+    {% include "add_edit_dish_partial.html" %}
 
     <button id="submit">Save</button>
 </form>
 
 <form action="{{url_for('providers_bp.delete_dish', id=id)}}" method="POST">
-    {{ form.hidden_tag() }}
     <button>Delete</button>
 </form>
 
 {% endblock %}
 {% block scripts%}
-{% endblock%}
+<script src="{{url_for('providers_bp.static',filename='nutrition.js')}}"></script>
+<script src="{{url_for('providers_bp.static',filename='validation.js')}}"></script>
+<script src="{{url_for('providers_bp.static',filename='providers.js')}}"></script> {% endblock%}
