--- a/schools/templates/schools_edit_info.html
+++ b/schools/templates/schools_edit_info.html
@@ -131,5 +131,5 @@
 
 {% endblock %}
 {% block scripts%}
-<script src="{{url_for('static',filename='app.js')}}"></script>
+<script src="{{url_for('static',filename='recurring_dates.js')}}"></script>
 <script src="{{url_for('static',filename='autocomplete.js')}}"></script>{% endblock%}
