--- a/general/templates/browsing.html
+++ b/general/templates/browsing.html
@@ -3,6 +3,9 @@
 {% block title %}For browsing clients{% endblock %}
 {% block content %}
 <h1>Just browsing</h1>
-<p>Could be potential providers, parents or schools (do some marketing here)</p>
+<p>Could be potential providers, parents or schools (do some marketing here)
+    List some of the schools and school boards? and providers here dynamically to show them an example of who is
+    participating
+</p>
 
 {% endblock %}
