--- a/schools/templates/schools_home.html
+++ b/schools/templates/schools_home.html
@@ -9,6 +9,9 @@
     <h3>school info</h3>
     <ul>
         <li>
+            School code: {{s.code}}
+        </li>
+        <li>
             Name: {{s.name}}
         </li>
         <li>
